Fix EF sql requests

--- a/TrainingRecommender/ClientApp/src/app/pages/admin/admin.component.html
+++ b/TrainingRecommender/ClientApp/src/app/pages/admin/admin.component.html
@@ -86,14 +86,14 @@
           <div class="form-group">
             <label for="username">Ім'я</label>
             <input type="text" class="form-control" id="username" [(ngModel)]="obj.name"
-              [ngModelOptions]="{standalone: true}">
+                   [ngModelOptions]="{standalone: true}">
           </div>
         </div>
         <div class="col">
           <div class="form-group">
             <label for="surname">Прізвище</label>
             <input type="text" class="form-control" id="surname" [(ngModel)]="obj.surname"
-              [ngModelOptions]="{standalone: true}">
+                   [ngModelOptions]="{standalone: true}">
           </div>
         </div>
       </div>
@@ -102,7 +102,7 @@
         <div class="col">
           <div class="custom-control custom-switch">
             <input type="checkbox" [ngModelOptions]="{standalone: true}" [(ngModel)]="obj.gender"
-              class="custom-control-input" id="customSwitch1">
+                   class="custom-control-input" id="customSwitch1">
             <label class="custom-control-label" for="customSwitch1">{{obj.gender ? 'Жін' : 'Чол'}}</label>
           </div>
         </div>
@@ -110,7 +110,7 @@
           <div class="form-group">
             <label for="dateOfBirth">Вік</label>
             <input type="number" class="form-control" id="dateOfBirth" [(ngModel)]="obj.age"
-              [ngModelOptions]="{standalone: true}">
+                   [ngModelOptions]="{standalone: true}">
           </div>
         </div>
       </div>
@@ -119,14 +119,14 @@
           <div class="form-group">
             <label for="height">Ріст</label>
             <input type="number" class="form-control" id="height" [(ngModel)]="obj.height"
-              [ngModelOptions]="{standalone: true}">
+                   [ngModelOptions]="{standalone: true}">
           </div>
         </div>
         <div class="col">
           <div class="form-group">
             <label for="weight">Вага</label>
             <input type="number" class="form-control" id="weight" [(ngModel)]="obj.weight"
-              [ngModelOptions]="{standalone: true}">
+                   [ngModelOptions]="{standalone: true}">
           </div>
         </div>
       </div>
@@ -135,16 +135,16 @@
         <div class="col">
           <label for="trainingRate">Частота тренувань ... разів </label>
           <input type="number" class="form-control" id="trainingRate" [(ngModel)]="rate"
-          [ngModelOptions]="{standalone: true}">
+                 [ngModelOptions]="{standalone: true}">
         </div>
         <div class="col">
           <label for="exampleFormControlSelect1">на ...</label>
           <select class="form-control" id="exampleFormControlSelect1" [(ngModel)]="ratePer"
-          [ngModelOptions]="{standalone: true}">
-          <option [value]="0">тиждень</option>
-          <option [value]="1">місяць</option>
-          <option [value]="2">рік</option>
-        </select>
+                  [ngModelOptions]="{standalone: true}">
+            <option [value]="0">тиждень</option>
+            <option [value]="1">місяць</option>
+            <option [value]="2">рік</option>
+          </select>
         </div>
       </div>
 
@@ -152,8 +152,7 @@
         <div class="col">
           <div class="form-group">
             <label for="activity">Спосіб життя</label>
-            <select class="form-control" id="activity" [(ngModel)]="obj.activity" [ngModelOptions]="{standalone: true}"
-             >
+            <select class="form-control" id="activity" [(ngModel)]="obj.activity" [ngModelOptions]="{standalone: true}">
               <option [value]="0">неактивний</option>
               <option [value]="1">звичайний</option>
               <option [value]="2">активний</option>
@@ -163,8 +162,7 @@
         <div class="col">
           <div class="form-group">
             <label for="goal">Мета тренувань</label>
-            <select class="form-control" id="goal" [(ngModel)]="obj.goal" [ngModelOptions]="{standalone: true}"
-             >
+            <select class="form-control" id="goal" [(ngModel)]="obj.goal" [ngModelOptions]="{standalone: true}">
               <option [value]="0">схуднення</option>
               <option [value]="1">нарощеня масси</option>
               <option [value]="2">підтримка форми</option>
@@ -177,8 +175,7 @@
         <div class="col">
           <div class="form-group">
             <label for="figure">Тип фігури</label>
-            <select class="form-control" id="figure" [(ngModel)]="obj.figureType" [ngModelOptions]="{standalone: true}"
-             >
+            <select class="form-control" id="figure" [(ngModel)]="obj.figureType" [ngModelOptions]="{standalone: true}">
               <option [value]="0">худощава</option>
               <option [value]="1">нормальна</option>
               <option [value]="2">мускулиста</option>
@@ -190,7 +187,7 @@
           <div class="form-group">
             <label for="diseases">Захворювання</label>
             <select multiple class="form-control" id="diseases" [(ngModel)]="userDiseases"
-              [ngModelOptions]="{standalone: true}">
+                    [ngModelOptions]="{standalone: true}">
               <option *ngFor="let disease of diseases" [value]="disease">{{disease.name}}</option>
             </select>
           </div>
@@ -198,11 +195,11 @@
       </div>
       <div class="form-group">
         <label for="activity">Роль</label>
-        <select class="form-control" id="activity" [(ngModel)]="obj.roles" [ngModelOptions]="{standalone: true}"
-         >
+        <select class="form-control" id="activity" [(ngModel)]="obj.roles" [ngModelOptions]="{standalone: true}">
           <option value="admin">Адміністратор</option>
         </select>
       </div>
+      <button type="submit" class="btn btn-primary" (click)="save()">Зберегти</button>
     </form>
   </div>
 </ng-template>
